# swift-matter-examples

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  Package.swift  README.md  metadata.json
.github/workflows/: build.yml  lint.yml
Sources/SwiftMatterExamples/: Empty.swift
Sources/SwiftMatterExamples/Documentation.docc/: Tutorial Table of Contents.tutorial
Sources/SwiftMatterExamples/Documentation.docc/Resources/install-esp-terminal/: install-esp-terminal-00.sh  install-esp-terminal-01.sh  install-esp-terminal-02.sh  install-esp-terminal-03.sh  install-esp-terminal-04.sh  install-esp-terminal-05.sh  install-esp-terminal-06.sh
Sources/SwiftMatterExamples/Documentation.docc/Resources/install-swift-terminal/: install-swift-terminal-00.sh  install-swift-terminal-01.sh  install-swift-terminal-02.sh
Sources/SwiftMatterExamples/Documentation.docc/Resources/run-example-led-blink/: run-example-led-blink-01.sh  run-example-led-blink-02.sh  run-example-led-blink-03.sh  run-example-led-blink-04.sh  walkthrough-example-led-blink-01.swift  walkthrough-example-led-blink-02.swift  walkthrough-example-led-blink-03.swift  walkthrough-example-led-blink-04.swift  walkthrough-example-led-blink-05.swift  walkthrough-example-led-blink-led-00.swift  walkthrough-example-led-blink-led-01.swift
Sources/SwiftMatterExamples/Documentation.docc/Resources/run-example-smart-light/: run-example-smart-light-01.sh  run-example-smart-light-02.sh  run-example-smart-light-03.sh  run-example-smart-light-04.sh  walkthrough-example-smart-light-00.swift  walkthrough-example-smart-light-01.swift  walkthrough-example-smart-light-02.swift  walkthrough-example-smart-light-03.swift  walkthrough-example-smart-light-04-a.swift  walkthrough-example-smart-light-04-b.swift  walkthrough-example-smart-light-04-c.swift  walkthrough-example-smart-light-04.swift  walkthrough-example-smart-light-05.swift  walkthrough-example-smart-light-06.swift
Sources/SwiftMatterExamples/Documentation.docc/Resources/setup-docker/: setup-docker-00.sh  setup-docker-01.sh  setup-docker-03.sh  setup-docker-04.sh  setup-docker-05.sh
Sources/SwiftMatterExamples/Documentation.docc/Resources/setup-linux/: setup-linux-02.sh  setup-linux-03.sh  setup-linux-04.sh  setup-linux-05.sh
Sources/SwiftMatterExamples/Documentation.docc/Resources/setup-macOS/: setup-macOS-00.sh  setup-macOS-01.sh  setup-macOS-02.sh
Sources/SwiftMatterExamples/Documentation.docc/Tutorials/: Run-Example-LED-Blink.tutorial  Run-Example-Smart-Light.tutorial  Setup-Docker.tutorial  Setup-Linux.tutorial  Setup-MacOS.tutorial
data/documentation/: swiftmatterexamples.json
data/tutorials/: tutorial-table-of-contents.json
data/tutorials/swiftmatterexamples/: run-example-led-blink.json  run-example-smart-light.json  setup-docker.json  setup-macos.json
empty-template/: CMakeLists.txt  README.md
empty-template/main/: BridgingHeader.h  CMakeLists.txt  Main.swift  idf_component.yml
index/: data.mdb  index.json  navigator.index
led-blink/: README.md
led-blink/main/: BridgingHeader.h  CMakeLists.txt  LED.swift  Main.swift
pwm-template/: CMakeLists.txt  README.md
pwm-template/main/: BridgingHeader.h  CMakeLists.txt  Main.swift  PWM.swift
smart-light/: CMakeLists.txt  README.md
smart-light/Matter/: Attribute.swift  Clusters.swift  Matter.swift  MatterInterface.cpp  MatterInterface.h  Node.swift
smart-light/main/: BridgingHeader.h  CMakeLists.txt  LED.swift  Main.swift  linker.lf
tutorials/swiftmatterexamples/setup-macos/: index.html
